docs: Update README with development guidelines and chapter integration process